<resources>
    <string name="app_name">Skill Swap Demo</string>
    <string name="prompt_select_kind_skill_label">Select kind of skill</string>
    <string name="login_with_google_label">Login with Google account</string>
    <string name="submit_label">Submit</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="skill_name_label">Skill name:</string>
    <string name="description_label">Description:</string>
    <string name="add_skill_learn_label">Add skill want learn</string>
    <string name="add_skill_teach_label">Add skill want teach</string>
    <string name="want_learn_label">I want to learn</string>
    <string name="know_label">I want to teach</string>
    <string name="select_skill_label">Select skill</string>
    <string name="skill_exists_warning">This skill already exists.</string>
    <string name="profile_label">Profile</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    <string name="edit_label">Edit</string>
    <string name="remove_label">Remove</string>
    <string name="confirm_remove_skill_label">Are you sure want remove skill?</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes_label">Yes</string>
    <string name="language_label">Language</string>
    <string name="theme_label">Theme</string>
    <string name="light_label">Light</string>
    <string name="dark_label">Dark</string>
    <string name="bkhezry_twitter_label" translatable="false">\@bkhezry</string>
    <string name="behrouz_khezry_label">Behrouz Khezry</string>
    <string name="developer_label">Developer</string>
    <string name="sponsor_website_label">Access Website</string>
    <string name="sponsor_label">Sponsor</string>
    <string name="license_label">License</string>
    <string name="changelog_label">Changelog</string>
    <string name="version_label">Version</string>
    <string name="no_internet_label">Please check internet connection</string>
    <string name="ok_label">OK</string>
    <string name="error_get_data_label">Error during get data from server</string>
    <string name="retry_label">Retry</string>
    <string name="field_require_label">Please fill all fields</string>
    <string name="select_skill_message_label">Please select a skill</string>
    <string name="more_info_label">More info</string>
    <string name="request_label">Request</string>
    <string name="connections_label">Connections</string>
    <string name="search_label">Search</string>
    <string name="send_email_label">Send Email</string>
    <string name="delete_label">Delete</string>
    <string name="received_label">Received</string>
    <string name="sent_label">Sent</string>
    <string name="reject_label">Reject</string>
    <string name="accept">Accept</string>
    <string name="request_sent_success">request sent successfully.</string>
    <string name="no_skill_label">No skill</string>
    <string name="for_add_skill_press_button_label">For add skill press + button</string>
    <string name="delete_account_label">Delete</string>
    <string name="logout_label">Logout</string>
    <string name="logout_message_label">Are you sure want logout from app?</string>
    <string name="delete_account_message">Are you sure want delete your account permanently?</string>
    <string name="update_label">Update</string>
    <string name="category_label">Category</string>
    <string name="no_search_label">No search result</string>
    <string name="search_later_label">Please search later</string>
    <string name="gender_label">Gender:</string>
    <string name="search_item_found_label">Account found:</string>
    <string name="learn_search_label">Learns:</string>
    <string name="teach_search_label">Teaches:</string>
    <string name="request_sent_to_label">Sent to:</string>
    <string name="email_label">Email:</string>
    <string name="send_request_to_label">Send request to:</string>
    <string name="account_deleted_label">Account deleted</string>
    <string name="rejected_request_label">Your request rejected</string>
    <string name="no_response_label">No response yet</string>
    <string name="no_request_found_label">No request found</string>
    <string name="no_request_found_description_label">Submitted request will be showing here</string>
    <string name="confirm_remove_request_label">Are you sure want remove this request?</string>
    <string name="request_skill_swap_label">Request skill swap</string>
    <string name="mail_app_not_available_label">Mail app not available</string>
    <string name="me_learn_search_label">I learn:</string>
    <string name="me_teach_search_label">I teach:</string>
    <string name="request_received_from_label">Received from:</string>
    <string name="bkhezry_twitter_url" translatable="false">https://twitter.com/bkhezry</string>
    <string name="browser_not_found_label">Browser not found</string>
    <string name="access_deny_label">Access is deny, Please login again</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="error_request_message">Error occurred. Please try again</string>
    <string name="no_email_available_label">Email of user not available</string>
</resources>
