<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layoutDirection="locale"
    app:cardBackgroundColor="?attr/colorPrimary"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:strokeColor="@color/grey_10"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:layoutDirection="locale"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skill_type_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="Add Skill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@color/grey_40" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_skill_button"
            style="@style/StyleMaterialButtonLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_skill_label"
            android:textColor="@color/grey_10"
            app:icon="@drawable/ic_list_black_24dp"
            app:iconTint="@color/grey_10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/til_skill_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/skill_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="4"
            android:maxLines="4"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            style="@style/StyleMaterialButtonLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/submit_label"
            android:textColor="@color/grey_10" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>